--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   },
   "engines": {
     "node": "0.10.x"
+  },
+  "scripts": {
+    "test": "mocha --compilers coffee:coffee-script/register test/"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.12.2",
+    "mocha": "^3.2.0"
   }
 }
