--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^4.3.3"
+    "hubot-slack": "^4.3.3",
+    "coffee-script": "^1.12.2"
   },
   "engines": {
     "node": "0.10.x"
